--- a/portfolio.html
+++ b/portfolio.html
@@ -198,19 +198,19 @@
         <div class="content-box col-sm-12">
           <h2>Infographic</h2>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://youtu.be/dFG_URMJ2WY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://youtu.be/embed/dFG_URMJ2WY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
           </div>
 
           <div class="content-box col-sm-12">
             <h2>Short Movie</h2>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://youtu.be/Ko7AJ3z50gw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://youtu.be/embed/Ko7AJ3z50gw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <div class="content-box col-sm-12">
               <h2>Azure Topolgy</h2>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=nfdGGD1oZIE" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/watch?v=nfdGGD1oZIE" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
       </div>
