--- a/portfolio.html
+++ b/portfolio.html
@@ -198,13 +198,13 @@
         <div class="content-box col-sm-12">
           <h2>Infographic</h2>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://youtu.be/embed/dFG_URMJ2WY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://youtube.com/embed/dFG_URMJ2WY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
           </div>
 
           <div class="content-box col-sm-12">
             <h2>Short Movie</h2>
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://youtu.be/embed/Ko7AJ3z50gw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://youtube.com/embed/Ko7AJ3z50gw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <div class="content-box col-sm-12">
