--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
 
     <div class="row text-center">
       <div class="col-sm-4">
-        <img src="img/pc.png">
+        <img src="img/Pc.png">
         <h4>Public Speaking</h4>
         <p>98%</p>
       </div>
