--- a/portfolio.html
+++ b/portfolio.html
@@ -210,7 +210,7 @@
             <div class="content-box col-sm-12">
               <h2>Azure Topolgy</h2>
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/watch?v=nfdGGD1oZIE" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nfdGGD1oZIE" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
       </div>
