--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="">Blog</a></li>
+              <li><a href="https://medium.com/@tblaksmana/mindset-yang-amburadul-ba821064c093">Blog</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
           </nav>
