--- a/portfolio.html
+++ b/portfolio.html
@@ -225,7 +225,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-12">
-            <p>copyright 2020 | Built with <i class="glyphicon glyphicon-heart"></i> by <a href="https://www.instagram.com/tegar.laksmana/">Tegar</a></p>
+            <p>copyright 2020 | Built with <i class="glyphicon glyphicon-heart"></i> by <a href="https://www.instagram.com/tegar.laksmana/">Tegar Bayu Laksmana</a></p>
           </div>
         </div>
       </div>
