--- a/portfolio.html
+++ b/portfolio.html
@@ -187,7 +187,7 @@
       <div class="row">
         <div class="content-box col-sm-12">
           <h2>Design</h2>
-          <img src="img/XT3_36_TegarBayuLaksmana_MockUPTshirt.jpeg" class="img-thumbnail" alt="">
+          <img src="img/XT3_36_TegarBayuLaksmana_MockUPTshirt.jpg" class="img-thumbnail" alt="">
         </div>
 
         <div class="content-box col-sm-12">
