--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html">Home</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="https://medium.com/@tblaksmana">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
       </ul>
     </div>
