--- a/blog.html
+++ b/blog.html
@@ -56,24 +56,18 @@
 
      <!-- blog -->
     <div class="container text-center">
-      <div class="content-box col-sm-12">
-        <div class="embed-responsive embed-responsive-16by9">
+      <div class="col-sm-12">
           <blockquote class="embedly-card"><h4><a href="https://medium.com/local-love/santuy-aja-ini-cuman-broken-home-bukan-broken-life-f3a7d146f528">Santuy Aja Ini Cuman Broken Home Bukan Broken Life</a></h4><p>Semua ini akan segera berakhir dengan senyuman Yups ketemu lagi dengan saya Tegar... Okey disini pakek aku saja ya hehe. Sesuai dengan apa yang aku sampaikan di artikel sebelumnya. Aku akan cerita nih mengenai motivasi-motivasi apa saja yang membuat aku bisa survive dari masalah ini.</p></blockquote>
             <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-        </div>
 
-        <div class="content-box col-sm-12">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-sm-12">
             <blockquote class="embedly-card"><h4><a href="https://medium.com/local-love/memo-kecil-memaknai-sebuah-broken-home-35634174b9d4">Memo Kecil: Memaknai Sebuah Broken Home</a></h4><p>semua akan baik-baik saja Itulah pertanyaan yang aku katakan pada diri sendiri 3 tahun yang lalu. Aku berpikir bahwa hidupku ya gini-gini aja belum ada ceritanya, takada kisah menariknya sama sekali. Namun, 1 tahun setelahnya pertanyaan itu terjawab. Tuhan memang selalu asyik ketika memberi kejutan. Aku mengalami broken home.</p></blockquote>
             <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
           </div>
-          </div>
 
-          <div class="content-box col-sm-12">
-            <div class="embed-responsive embed-responsive-16by9">
+          <div class="col-sm-12">
               <blockquote class="embedly-card"><h4><a href="https://medium.com/@tblaksmana/mindset-yang-amburadul-ba821064c093">Mindset Yang Amburadul</a></h4><p>Hai kawan! Selamat datang di artikel pertama saya, semoga kalian bisa menikmati dan mengambil manfaatnya. Mohon maaf nih bila bahasa yang saya gunakan masih berantakan dan belepotan. Selamat menikmati....! Enjoyyy Pernah gak sih kalian melewati momen dimana kalian menghadapi sebuah masalah yang besar, berat, menyulitkan seakan-akan itu akhir dari segalanya?</p></blockquote>
-              <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
-            </div>
+            <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
             </div>
       </div>
     </div>
