--- a/blog.html
+++ b/blog.html
@@ -57,6 +57,10 @@
      <!-- blog -->
     <div class="container text-center">
       <div class="card-panel">
+          <blockquote class="embedly-card"><h4><a href="https://medium.com/@tblaksmana/krisis-integrasi-bangsa-karena-pandemi-korona-aee30d818e9d">Krisis Integrasi Bangsa Karena Pandemi Korona</a></h4><p>Analisis ancaman integrasi bangsa akibat pandemi COVID-19 "Aku lebih suka pemuda yang merokok dan minum kopi yang membicarakan persoalan negeri ini daripada pemuda kutu buku yang mementingkan diri sendiri" Topik yang akan kita bahas kali ini sangatlah seru kawan.</p></blockquote>
+              <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+        
+      <div class="card-panel">
           <blockquote class="embedly-card"><h4><a href="https://medium.com/local-love/santuy-aja-ini-cuman-broken-home-bukan-broken-life-f3a7d146f528">Santuy Aja Ini Cuman Broken Home Bukan Broken Life</a></h4><p>Semua ini akan segera berakhir dengan senyuman Yups ketemu lagi dengan saya Tegar... Okey disini pakek aku saja ya hehe. Sesuai dengan apa yang aku sampaikan di artikel sebelumnya. Aku akan cerita nih mengenai motivasi-motivasi apa saja yang membuat aku bisa survive dari masalah ini.</p></blockquote>
             <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
