--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/port.css">
+    <link rel="stylesheet" href="css/about.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body data-spy="scroll"  data-target="#jumbotron-example">
+  <body>
 
     <!-- navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
